--- a/AutoMall/ViewControllers/Mall/SettlementAddressCell.xib
+++ b/AutoMall/ViewControllers/Mall/SettlementAddressCell.xib
@@ -12,35 +12,100 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="settlementAddressCell" id="KGk-i7-Jjw" customClass="SettlementAddressCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="settlementAddressCell" rowHeight="80" id="KGk-i7-Jjw" customClass="SettlementAddressCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="add_carInfo" translatesAutoresizingMaskIntoConstraints="NO" id="uvi-7n-JV0">
-                        <rect key="frame" x="91.5" y="7" width="30" height="30"/>
+                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cVS-9x-pl4">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="18538120000" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ycn-bA-RLP">
+                                <rect key="frame" x="219" y="8" width="85" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="fXO-L0-qAh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="张三李四" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Bw-XA-Kcb">
+                                <rect key="frame" x="16" y="8" width="53.5" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="JlN-7z-U53"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="收货地址 收货地址 收货地址 收货地址 收货地址 收货地址 收货地址 收货地址" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZYB-2w-Wtw">
+                                <rect key="frame" x="16" y="29" width="288" height="42"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="42" id="aA8-wD-fiv"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="30" id="X3B-MI-o7A"/>
-                            <constraint firstAttribute="height" constant="30" id="bJT-Gg-xaV"/>
+                            <constraint firstItem="5Bw-XA-Kcb" firstAttribute="top" secondItem="cVS-9x-pl4" secondAttribute="top" constant="8" id="Fy5-mz-axL"/>
+                            <constraint firstItem="ycn-bA-RLP" firstAttribute="top" secondItem="cVS-9x-pl4" secondAttribute="top" constant="8" id="UAX-1n-sbA"/>
+                            <constraint firstAttribute="bottom" secondItem="ZYB-2w-Wtw" secondAttribute="bottom" constant="8" id="UrQ-aC-woc"/>
+                            <constraint firstAttribute="trailing" secondItem="ZYB-2w-Wtw" secondAttribute="trailing" constant="16" id="W2N-3Z-Ikv"/>
+                            <constraint firstItem="ZYB-2w-Wtw" firstAttribute="leading" secondItem="cVS-9x-pl4" secondAttribute="leading" constant="16" id="WQ3-W2-sLL"/>
+                            <constraint firstAttribute="trailing" secondItem="ycn-bA-RLP" secondAttribute="trailing" constant="16" id="YZX-to-b1a"/>
+                            <constraint firstItem="5Bw-XA-Kcb" firstAttribute="leading" secondItem="cVS-9x-pl4" secondAttribute="leading" constant="16" id="ab8-mM-eNB"/>
                         </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="添加收货地址" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4A5-ms-QRc">
-                        <rect key="frame" x="126.5" y="12.5" width="92" height="18"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gr0-6x-cJc">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="add_carInfo" translatesAutoresizingMaskIntoConstraints="NO" id="uvi-7n-JV0">
+                                <rect key="frame" x="91.5" y="25" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="X3B-MI-o7A"/>
+                                    <constraint firstAttribute="height" constant="30" id="bJT-Gg-xaV"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="添加收货地址" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4A5-ms-QRc">
+                                <rect key="frame" x="131.5" y="30.5" width="92" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="uvi-7n-JV0" firstAttribute="centerX" secondItem="Gr0-6x-cJc" secondAttribute="centerX" multiplier="2:3" id="3xz-cP-Adx"/>
+                            <constraint firstItem="4A5-ms-QRc" firstAttribute="centerY" secondItem="uvi-7n-JV0" secondAttribute="centerY" id="87a-eX-IXN"/>
+                            <constraint firstItem="uvi-7n-JV0" firstAttribute="centerY" secondItem="Gr0-6x-cJc" secondAttribute="centerY" id="pkV-pU-1Rw"/>
+                            <constraint firstItem="4A5-ms-QRc" firstAttribute="leading" secondItem="uvi-7n-JV0" secondAttribute="trailing" constant="10" id="wa8-Wn-BU9"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="4A5-ms-QRc" firstAttribute="centerY" secondItem="uvi-7n-JV0" secondAttribute="centerY" id="3hA-4j-uHL"/>
-                    <constraint firstItem="uvi-7n-JV0" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="2:3" id="8ec-eu-oyf"/>
-                    <constraint firstItem="4A5-ms-QRc" firstAttribute="leading" secondItem="uvi-7n-JV0" secondAttribute="trailing" constant="5" id="swT-2U-n4X"/>
-                    <constraint firstItem="uvi-7n-JV0" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="tdC-sT-ERk"/>
+                    <constraint firstItem="Gr0-6x-cJc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="0iQ-ge-a2S"/>
+                    <constraint firstAttribute="bottom" secondItem="cVS-9x-pl4" secondAttribute="bottom" id="ITp-Hf-MCi"/>
+                    <constraint firstAttribute="trailing" secondItem="Gr0-6x-cJc" secondAttribute="trailing" id="JZu-go-Q0I"/>
+                    <constraint firstItem="Gr0-6x-cJc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="cR5-vV-cXv"/>
+                    <constraint firstItem="cVS-9x-pl4" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="dR4-Td-GMx"/>
+                    <constraint firstAttribute="bottom" secondItem="Gr0-6x-cJc" secondAttribute="bottom" id="f51-Jf-ruG"/>
+                    <constraint firstItem="cVS-9x-pl4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="fQt-X9-dHX"/>
+                    <constraint firstAttribute="trailing" secondItem="cVS-9x-pl4" secondAttribute="trailing" id="fpP-6M-ZoA"/>
                 </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="-103" y="62"/>
+            <connections>
+                <outlet property="addView" destination="Gr0-6x-cJc" id="jhE-eM-jNg"/>
+                <outlet property="addressL" destination="ZYB-2w-Wtw" id="68I-jg-6GR"/>
+                <outlet property="addressView" destination="cVS-9x-pl4" id="B4s-QC-uGG"/>
+                <outlet property="nameL" destination="5Bw-XA-Kcb" id="bD2-D9-j2S"/>
+                <outlet property="phoneL" destination="ycn-bA-RLP" id="sQZ-pR-4LA"/>
+            </connections>
+            <point key="canvasLocation" x="-399" y="-14"/>
         </tableViewCell>
     </objects>
     <resources>
