--- a/AutoMall/ViewControllers/PersonalCenter/MailCollectionVC.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/MailCollectionVC.xib
@@ -21,34 +21,22 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="O21-7K-tqr">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="ltp-OY-6te"/>
                         <outlet property="delegate" destination="-1" id="5uI-54-gOB"/>
                     </connections>
                 </tableView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dbv-IT-XST">
-                    <rect key="frame" x="0.0" y="623" width="375" height="44"/>
-                    <color key="backgroundColor" red="0.91764705879999997" green="0.12941176469999999" blue="0.1764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="44" id="dhX-gI-uYk"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <state key="normal" title="清空收藏"/>
-                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="Dbv-IT-XST" secondAttribute="trailing" id="183-Z0-wFj"/>
                 <constraint firstItem="O21-7K-tqr" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Apn-7g-cIo"/>
-                <constraint firstItem="Dbv-IT-XST" firstAttribute="top" secondItem="O21-7K-tqr" secondAttribute="bottom" id="E0v-oT-mqW"/>
                 <constraint firstAttribute="trailing" secondItem="O21-7K-tqr" secondAttribute="trailing" id="Ieo-31-VPg"/>
                 <constraint firstItem="O21-7K-tqr" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="MAI-rB-QBp"/>
-                <constraint firstAttribute="bottom" secondItem="Dbv-IT-XST" secondAttribute="bottom" id="awG-2l-lgh"/>
-                <constraint firstItem="Dbv-IT-XST" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="qlc-SD-0q9"/>
+                <constraint firstAttribute="bottom" secondItem="O21-7K-tqr" secondAttribute="bottom" id="fNg-U2-73I"/>
             </constraints>
-            <point key="canvasLocation" x="-407" y="39"/>
+            <point key="canvasLocation" x="-399" y="-75"/>
         </view>
     </objects>
 </document>
