--- a/AutoMall/ViewControllers/Mall/CommodityDetailContentCell.xib
+++ b/AutoMall/ViewControllers/Mall/CommodityDetailContentCell.xib
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="59.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WgH-ht-bo3">
@@ -32,7 +32,10 @@
                     <constraint firstItem="WgH-ht-bo3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="zKr-pQ-RXf"/>
                 </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="25" y="54"/>
+            <connections>
+                <outlet property="remarkL" destination="WgH-ht-bo3" id="KZu-k4-ugb"/>
+            </connections>
+            <point key="canvasLocation" x="-303" y="55"/>
         </tableViewCell>
     </objects>
 </document>
