--- a/AutoMall/ViewControllers/PersonalCenter/CustomServiceCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/CustomServiceCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -25,8 +25,9 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="300" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Yfj-fR-v2T">
-                        <rect key="frame" x="272" y="12.5" width="40" height="17"/>
+                        <rect key="frame" x="232" y="1" width="40" height="40"/>
                         <constraints>
+                            <constraint firstAttribute="height" constant="40" id="Gcb-Nz-nh6"/>
                             <constraint firstAttribute="width" constant="40" id="mJG-ON-f1M"/>
                         </constraints>
                         <color key="textColor" red="0.91764705879999997" green="0.12941176469999999" blue="0.1764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -34,13 +35,13 @@
                         <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                     </textField>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c7A-Gh-gNr">
-                        <rect key="frame" x="254.5" y="10.5" width="17.5" height="21"/>
+                        <rect key="frame" x="214.5" y="10.5" width="17.5" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.91764705879999997" green="0.12941176469999999" blue="0.1764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sbf-A5-7HN">
-                        <rect key="frame" x="224.5" y="6" width="30" height="30"/>
+                        <rect key="frame" x="184.5" y="6" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="UdN-RX-J86"/>
                             <constraint firstAttribute="height" constant="30" id="nLI-hF-YeO"/>
@@ -49,14 +50,25 @@
                         <state key="normal" image="checkbox_no"/>
                         <state key="selected" image="checkbox_yes"/>
                     </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="/次" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mKG-Qp-me9">
+                        <rect key="frame" x="272" y="12.5" width="40" height="17"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="40" id="MYV-lW-yL7"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="trailing" secondItem="mKG-Qp-me9" secondAttribute="trailing" constant="8" id="1FZ-Nz-A0H"/>
                     <constraint firstItem="Yfj-fR-v2T" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="3fb-Xj-7RP"/>
                     <constraint firstItem="Yfj-fR-v2T" firstAttribute="leading" secondItem="c7A-Gh-gNr" secondAttribute="trailing" id="Eaj-Xe-2Ol"/>
                     <constraint firstItem="sbf-A5-7HN" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="GMz-DX-QNK"/>
                     <constraint firstItem="aQc-Fx-fCN" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="MzW-mq-4Tx"/>
                     <constraint firstItem="aQc-Fx-fCN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="cqG-sv-xFp"/>
-                    <constraint firstAttribute="trailing" secondItem="Yfj-fR-v2T" secondAttribute="trailing" constant="8" id="rFj-la-WIk"/>
+                    <constraint firstItem="mKG-Qp-me9" firstAttribute="leading" secondItem="Yfj-fR-v2T" secondAttribute="trailing" id="h5C-s5-ayv"/>
+                    <constraint firstItem="mKG-Qp-me9" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="jeO-Ky-SyT"/>
                     <constraint firstItem="c7A-Gh-gNr" firstAttribute="leading" secondItem="sbf-A5-7HN" secondAttribute="trailing" id="slW-xh-aSp"/>
                     <constraint firstItem="c7A-Gh-gNr" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="upn-vU-c7D"/>
                 </constraints>
@@ -65,8 +77,9 @@
                 <outlet property="moneyTF" destination="Yfj-fR-v2T" id="fKt-P5-7jp"/>
                 <outlet property="nameL" destination="aQc-Fx-fCN" id="Uph-oe-V8Q"/>
                 <outlet property="radioBtn" destination="sbf-A5-7HN" id="yoA-SA-Bwt"/>
+                <outlet property="unitL" destination="mKG-Qp-me9" id="Vqp-cH-IsH"/>
             </connections>
-            <point key="canvasLocation" x="-85" y="-68"/>
+            <point key="canvasLocation" x="-393" y="-87"/>
         </tableViewCell>
     </objects>
     <resources>
