--- a/AutoMall/ViewControllers/Mall/MetodPaymentVC.xib
+++ b/AutoMall/ViewControllers/Mall/MetodPaymentVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -13,6 +13,7 @@
             <connections>
                 <outlet property="ailpay" destination="kxG-mm-eQ9" id="ar8-EK-s1Y"/>
                 <outlet property="jifen" destination="5NA-nd-7Fn" id="7Cq-e4-b3A"/>
+                <outlet property="moneyL" destination="kwT-7f-Abb" id="WJx-8A-fAr"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="wx" destination="7T5-en-u41" id="6TB-Oo-fm9"/>
             </connections>
@@ -473,7 +474,7 @@
                     <include reference="cXl-ni-BB4"/>
                 </mask>
             </variation>
-            <point key="canvasLocation" x="-170" y="77"/>
+            <point key="canvasLocation" x="-147" y="52"/>
         </view>
     </objects>
     <resources>
